--- a/style.css
+++ b/style.css
@@ -21,10 +21,10 @@ h1, p {
 
 .errorMsg {
   color: #cc0000;
-  margin-bottom: 12px;
+  margin-bottom: 1.5rem;
 }
 
 .sucessMsg {
   color: #6B8E23;
-  margin-bottom: 10px;
+  margin-bottom: 1.5rem;
 }
